# sillycalcs

./: .gitignore  LICENSE  README.md  actual_parser.py  intelligent_calc.py  pylintrc  pyproject.toml  safety_first_calc.py  speed_matters_calc.py
