[tool.poetry]
name = "sillycalcs"
version = "1.0.0"
description = "Some of the worst calculators ever."
authors = ["Ian Tayler <iangtayler@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
pylint = "^2.4"
ipython = "^7.9"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
